--- a/src/stylesheets/themes/dance.scss
+++ b/src/stylesheets/themes/dance.scss
@@ -1,51 +1,45 @@
-.smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
-	background: $dance-primary; /* Old browsers */
-	background: -moz-radial-gradient(center, ellipse cover,  $dance-primary 0%, $dance-secondary 100%); /* FF3.6+ */
-	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,$dance-primary), color-stop(100%,$dance-secondary)); /* Chrome,Safari4+ */
-	background: -webkit-radial-gradient(center, ellipse cover,  $dance-primary 0%,$dance-secondary 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-radial-gradient(center, ellipse cover,  $dance-primary 0%,$dance-secondary 100%); /* Opera 12+ */
-	background: -ms-radial-gradient(center, ellipse cover,  $dance-primary 0%,$dance-secondary 100%); /* IE10+ */
-	background: radial-gradient(center, ellipse cover,  $dance-primary 0%,$dance-secondary 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$dance-primary}', endColorstr='#{$dance-secondary}',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-}
 
-.rightColumn .styleTwo .border {
-  background-color: #003832;
-}
+#page.dance {
 
-.nameBarButtons li a {
-  color: $dance-primary;
-}
-
-.expandedNameBarContainer h2 {
-  color: #a7c3be;
-}
-
-#social_follow_us {
-  .banner {
-    background-image: image-url('copa_dance_follow_us.png');
+  .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
+  	background: $dance-primary; /* Old browsers */
+  	background: -moz-radial-gradient(center, ellipse cover,  $dance-primary 0%, $dance-secondary 100%); /* FF3.6+ */
+  	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,$dance-primary), color-stop(100%,$dance-secondary)); /* Chrome,Safari4+ */
+  	background: -webkit-radial-gradient(center, ellipse cover,  $dance-primary 0%,$dance-secondary 100%); /* Chrome10+,Safari5.1+ */
+  	background: -o-radial-gradient(center, ellipse cover,  $dance-primary 0%,$dance-secondary 100%); /* Opera 12+ */
+  	background: -ms-radial-gradient(center, ellipse cover,  $dance-primary 0%,$dance-secondary 100%); /* IE10+ */
+  	background: radial-gradient(center, ellipse cover,  $dance-primary 0%,$dance-secondary 100%); /* W3C */
+  	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$dance-primary}', endColorstr='#{$dance-secondary}',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
   }
-  li span {
-    &.hover_state, &.inactive_state {
-      background: image-url('copa_dance_icons.png');
+
+  .rightColumn .styleTwo .border {
+    background-color: #003832;
+  }
+
+  .nameBarButtons li a {
+    color: $dance-primary;
+  }
+
+  .expandedNameBarContainer h2 {
+    color: #a7c3be;
+  }
+
+  #social_follow_us {
+    .banner {
+      background-image: image-url('copa_dance_follow_us.png');
+    }
+    li span {
+      &.hover_state, &.inactive_state {
+        background: image-url('copa_dance_icons.png');
+      }
     }
   }
-}
 
-.rounded-slider .info-container .blue {
-  background-color: $dance-primary;
-}
+  .rounded-slider .info-container .blue {
+    background-color: $dance-primary;
+  }
 
-.newbutton a {
-  border: 1px solid $dance-primary;
-  background-color: #1f1f1f;
-  background-image: -webkit-gradient(linear, left top, left bottom, from($dance-primary), to($dance-secondary));
-  background-image: -webkit-linear-gradient(top, $dance-primary, $dance-secondary);
-  background-image: -moz-linear-gradient(top, $dance-primary, $dance-secondary);
-  background-image: -o-linear-gradient(top, $dance-primary, $dance-secondary);
-  background-image: linear-gradient(to bottom, $dance-primary, $dance-secondary);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$dance-primary}', endColorstr='#{$dance-secondary}',GradientType=1 );
-  &:hover {
+  .newbutton a {
     border: 1px solid $dance-primary;
     background-color: #1f1f1f;
     background-image: -webkit-gradient(linear, left top, left bottom, from($dance-primary), to($dance-secondary));
@@ -54,15 +48,25 @@
     background-image: -o-linear-gradient(top, $dance-primary, $dance-secondary);
     background-image: linear-gradient(to bottom, $dance-primary, $dance-secondary);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$dance-primary}', endColorstr='#{$dance-secondary}',GradientType=1 );
+    &:hover {
+      border: 1px solid $dance-primary;
+      background-color: #1f1f1f;
+      background-image: -webkit-gradient(linear, left top, left bottom, from($dance-primary), to($dance-secondary));
+      background-image: -webkit-linear-gradient(top, $dance-primary, $dance-secondary);
+      background-image: -moz-linear-gradient(top, $dance-primary, $dance-secondary);
+      background-image: -o-linear-gradient(top, $dance-primary, $dance-secondary);
+      background-image: linear-gradient(to bottom, $dance-primary, $dance-secondary);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$dance-primary}', endColorstr='#{$dance-secondary}',GradientType=1 );
+    }
   }
-}
 
-.midPhotoCallouts .photoCallout .caption {
-  background-color: $dance-primary;
-}
-
-.photoCallouts {
-  .caption, .rollover {
+  .midPhotoCallouts .photoCallout .caption {
     background-color: $dance-primary;
+  }
+
+  .photoCallouts {
+    .caption, .rollover {
+      background-color: $dance-primary;
+    }
   }
 }
