--- a/src/stylesheets/themes/wilkinson.scss
+++ b/src/stylesheets/themes/wilkinson.scss
@@ -1,51 +1,45 @@
-.smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
-	background: $wilkinson-primary; /* Old browsers */
-	background: -moz-radial-gradient(center, ellipse cover, $wilkinson-primary 1%, $wilkinson-secondary 93%); /* FF3.6+ */
-	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(1%,$wilkinson-primary), color-stop(93%,$wilkinson-secondary)); /* Chrome,Safari4+ */
-	background: -webkit-radial-gradient(center, ellipse cover, $wilkinson-primary 1%,$wilkinson-secondary 93%); /* Chrome10+,Safari5.1+ */
-	background: -o-radial-gradient(center, ellipse cover, $wilkinson-primary 1%,$wilkinson-secondary 93%); /* Opera 12+ */
-	background: -ms-radial-gradient(center, ellipse cover, $wilkinson-primary 1%,$wilkinson-secondary 93%); /* IE10+ */
-	background: radial-gradient(center, ellipse cover, $wilkinson-primary 1%,$wilkinson-secondary 93%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$wilkinson-primary}', endColorstr='#{$wilkinson-secondary}',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-}
 
-.rightColumn .styleTwo .border {
-  background-color: $theme-blue;
-}
+#page.wilkinson {
 
-.nameBarButtons li a {
-  color: $wilkinson-primary;
-}
-
-.expandedNameBarContainer h2 {
-  color: #a8cce1;
-}
-
-#social_follow_us {
-  .banner {
-    background-image: image-url('wilkinson_follow_us.png');
+  .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
+  	background: $wilkinson-primary; /* Old browsers */
+  	background: -moz-radial-gradient(center, ellipse cover, $wilkinson-primary 1%, $wilkinson-secondary 93%); /* FF3.6+ */
+  	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(1%,$wilkinson-primary), color-stop(93%,$wilkinson-secondary)); /* Chrome,Safari4+ */
+  	background: -webkit-radial-gradient(center, ellipse cover, $wilkinson-primary 1%,$wilkinson-secondary 93%); /* Chrome10+,Safari5.1+ */
+  	background: -o-radial-gradient(center, ellipse cover, $wilkinson-primary 1%,$wilkinson-secondary 93%); /* Opera 12+ */
+  	background: -ms-radial-gradient(center, ellipse cover, $wilkinson-primary 1%,$wilkinson-secondary 93%); /* IE10+ */
+  	background: radial-gradient(center, ellipse cover, $wilkinson-primary 1%,$wilkinson-secondary 93%); /* W3C */
+  	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$wilkinson-primary}', endColorstr='#{$wilkinson-secondary}',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
   }
-  li span {
-    &.hover_state, &.inactive_state {
-      background: image-url('wilkinson_icons.png');
+
+  .rightColumn .styleTwo .border {
+    background-color: $theme-blue;
+  }
+
+  .nameBarButtons li a {
+    color: $wilkinson-primary;
+  }
+
+  .expandedNameBarContainer h2 {
+    color: #a8cce1;
+  }
+
+  #social_follow_us {
+    .banner {
+      background-image: image-url('wilkinson_follow_us.png');
+    }
+    li span {
+      &.hover_state, &.inactive_state {
+        background: image-url('wilkinson_icons.png');
+      }
     }
   }
-}
 
-.rounded-slider .info-container .blue {
-  background-color: $wilkinson-primary;
-}
+  .rounded-slider .info-container .blue {
+    background-color: $wilkinson-primary;
+  }
 
-.newbutton a {
-  border: 1px solid $wilkinson-primary;
-  background-color: $wilkinson-primary;
-  background-image: -webkit-gradient(linear, left top, left bottom, from($wilkinson-primary), to($wilkinson-secondary));
-  background-image: -webkit-linear-gradient(top, $wilkinson-primary, $wilkinson-secondary);
-  background-image: -moz-linear-gradient(top, $wilkinson-primary, $wilkinson-secondary);
-  background-image: -o-linear-gradient(top, $wilkinson-primary, $wilkinson-secondary);
-  background-image: linear-gradient(to bottom, $wilkinson-primary, $wilkinson-secondary);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$wilkinson-primary}', endColorstr='#{$wilkinson-secondary}',GradientType=1 );
-  &:hover {
+  .newbutton a {
     border: 1px solid $wilkinson-primary;
     background-color: $wilkinson-primary;
     background-image: -webkit-gradient(linear, left top, left bottom, from($wilkinson-primary), to($wilkinson-secondary));
@@ -54,15 +48,25 @@
     background-image: -o-linear-gradient(top, $wilkinson-primary, $wilkinson-secondary);
     background-image: linear-gradient(to bottom, $wilkinson-primary, $wilkinson-secondary);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$wilkinson-primary}', endColorstr='#{$wilkinson-secondary}',GradientType=1 );
+    &:hover {
+      border: 1px solid $wilkinson-primary;
+      background-color: $wilkinson-primary;
+      background-image: -webkit-gradient(linear, left top, left bottom, from($wilkinson-primary), to($wilkinson-secondary));
+      background-image: -webkit-linear-gradient(top, $wilkinson-primary, $wilkinson-secondary);
+      background-image: -moz-linear-gradient(top, $wilkinson-primary, $wilkinson-secondary);
+      background-image: -o-linear-gradient(top, $wilkinson-primary, $wilkinson-secondary);
+      background-image: linear-gradient(to bottom, $wilkinson-primary, $wilkinson-secondary);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$wilkinson-primary}', endColorstr='#{$wilkinson-secondary}',GradientType=1 );
+    }
   }
-}
 
-.midPhotoCallouts .photoCallout .caption {
-  background-color: $wilkinson-primary;
-}
-
-.photoCallouts {
-  .caption, .rollover {
+  .midPhotoCallouts .photoCallout .caption {
     background-color: $wilkinson-primary;
+  }
+
+  .photoCallouts {
+    .caption, .rollover {
+      background-color: $wilkinson-primary;
+    }
   }
 }
