Change identifier "page" to "theme"

--- a/docs/_layouts/2_column_modular.html
+++ b/docs/_layouts/2_column_modular.html
@@ -11,7 +11,7 @@
 <body>
     <!--<![endif]-->
 
-    <div id="page" class="{{page.theme}}">
+    <div id="theme" class="{{page.theme}}">
 
         <span class="hidden"><a href="#main" title="Skip navigation and jump directly to the main content of this page">Jump to the main content of this page</a></span>
 
