--- a/src/stylesheets/themes/business.scss
+++ b/src/stylesheets/themes/business.scss
@@ -1,5 +1,5 @@
 
-#page.business {
+#theme.business {
 
   .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
     background: $asbe-primary; /* Old browsers */
