--- a/src/stylesheets/themes/ces.scss
+++ b/src/stylesheets/themes/ces.scss
@@ -1,5 +1,5 @@
 
-#page.ces {
+#theme.ces {
 
   .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
   	background: $ces-primary; /* Old browsers */
