--- a/src/stylesheets/themes/crean.scss
+++ b/src/stylesheets/themes/crean.scss
@@ -1,5 +1,5 @@
 
-#page.crean {
+#theme.crean {
 
   .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
   	background: $theme-yellow; /* Old browsers */
