--- a/src/stylesheets/themes/wilkinson.scss
+++ b/src/stylesheets/themes/wilkinson.scss
@@ -1,5 +1,5 @@
 
-#page.wilkinson {
+#theme.wilkinson {
 
   .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
   	background: $wilkinson-primary; /* Old browsers */
