--- a/src/stylesheets/themes/copa.scss
+++ b/src/stylesheets/themes/copa.scss
@@ -1,5 +1,5 @@
 
-#page.copa {
+#theme.copa {
 
   .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo  {
   	background: $copa-primary; /* Old browsers */
