--- a/src/stylesheets/themes/dodge.scss
+++ b/src/stylesheets/themes/dodge.scss
@@ -1,5 +1,5 @@
 
-#page.dodge {
+#theme.dodge {
 
   .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
   	background: $dodge-primary; /* Old browsers */
