--- a/src/stylesheets/themes/pharmacy.scss
+++ b/src/stylesheets/themes/pharmacy.scss
@@ -1,5 +1,5 @@
 
-#page.pharmacy {
+#theme.pharmacy {
 
   .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
   	background: $pharmacy-primary; /* Old browsers */
