--- a/src/stylesheets/themes/scst.scss
+++ b/src/stylesheets/themes/scst.scss
@@ -1,5 +1,5 @@
 
-#page.scst {
+#theme.scst {
 
   .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
   	background: $theme-yellow; /* Old browsers */
