--- a/src/stylesheets/themes/theatre.scss
+++ b/src/stylesheets/themes/theatre.scss
@@ -1,5 +1,5 @@
 
-#page.theatre {
+#theme.theatre {
 
   .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
   	background: $theatre-primary; /* Old browsers */
