Added missing theme files

--- a/src/stylesheets/master.scss
+++ b/src/stylesheets/master.scss
@@ -82,12 +82,14 @@
 
 // Themes
 @import "themes/wilkinson";
-@import "themes/theatre";
+@import "themes/copa";
+@import "themes/copa__theatre";
+@import "themes/copa__dance";
+@import "themes/copa__music";
 @import "themes/business";
 @import "themes/ces";
-@import "themes/copa";
 @import "themes/crean";
-@import "themes/dance";
 @import "themes/dodge";
 @import "themes/pharmacy";
+@import "themes/law";
 @import "themes/scst";
