--- a/src/stylesheets/themes/copa__dance.scss
+++ b/src/stylesheets/themes/copa__dance.scss
@@ -1,5 +1,5 @@
 
-#theme.dance {
+#theme.copa__dance {
 
   .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
   	background: $dance-primary; /* Old browsers */
