--- a/src/stylesheets/widgets/funnel-region.scss
+++ b/src/stylesheets/widgets/funnel-region.scss
@@ -14,12 +14,7 @@
 	  margin: 20px 20px 20px 0;
 	  .featureImage {
       text-align: center;
-      img {
-        border: 3px solid $white;
-        -webkit-box-shadow: 0px 0px 7px #434343;
-        -moz-box-shadow: 0px 0px 7px #434343;
-        box-shadow: 0px 0px 7px #434343;
-      }
+      line-height: 0;
     }
     h3 {
       // font-family: "Open Sans";
