Edited featured area

--- a/docs/_includes/widgets/left_column/news_events_1.html
+++ b/docs/_includes/widgets/left_column/news_events_1.html
@@ -7,16 +7,16 @@
         <ul class="newsEventsContent">
             <li class="active">
                 <div class="featured">
-                    <img class="image" height="130" src="" width="225"/>
+                    <img class="image" height="130" src="{% asset_path placeholder/food_science.jpg %}" width="225" alt="Food Science College Bowl Team Wins Big at Regional Competition">
                                                                 
                     <div class="date">
-                        <div class="day"></div>
-                        <div class="month"></div>
-                        <div class="year"></div>
+                        <div class="day">05</div>
+                        <div class="month">MAR</div>
+                        <div class="year">2015</div>
                     </div>
-                    <div class="title"></div>
-                    <div class="description">View the published page to see this section.</div>
-                    <div class="readMore"></div>                                            
+                    <div class="title"><a href="//blogs.chapman.edu/scst/2015/03/05/college-bowl-team-for-the-regional-win/">Food Science College Bowl Team Wins Big at Regional Competition</a></div>
+                    <div class="description">Once again, Chapman University’s food science students reign as the Mountain West region’s champions of Institute of Food Technologists (IFT) College Bowl. Next stop: Chicago for the National Competition at the IFT Annual Meeting!</div>
+                    <div class="readMore"><a href="//blogs.chapman.edu/scst/2015/03/05/college-bowl-team-for-the-regional-win/">Read More<span class="bullet"> »</span></a></div>                                            
                 </div>
             </li>            
             <li>
