--- a/docs/_includes/widgets/primary_content/featured_news_events_feed_1.html
+++ b/docs/_includes/widgets/primary_content/featured_news_events_feed_1.html
@@ -7,19 +7,16 @@
   <ul class="newsEventsContent">
     <li class="active">
         <div class="featured">
-            <div class="col1">
-                <img class="image" height="190" src="" width="190"/>
+            <img class="image" height="130" src="{% asset_path placeholder/food_science.jpg %}" width="225" alt="Food Science College Bowl Team Wins Big at Regional Competition">
+                                                        
+            <div class="date">
+                <div class="day">05</div>
+                <div class="month">MAR</div>
+                <div class="year">2015</div>
             </div>
-            <div class="col2">
-                <div class="date">
-                    <div class="day"></div>
-                    <div class="month"></div>
-                    <div class="year"></div>
-                </div>
-                <div class="title"></div>
-                <div class="description">View the published page to see this section.</div>
-                <div class="readMore"></div>
-            </div>
+            <div class="title"><a href="//blogs.chapman.edu/scst/2015/03/05/college-bowl-team-for-the-regional-win/">Food Science College Bowl Team Wins Big at Regional Competition</a></div>
+            <div class="description">Once again, Chapman University’s food science students reign as the Mountain West region’s champions of Institute of Food Technologists (IFT) College Bowl. Next stop: Chicago for the National Competition at the IFT Annual Meeting!</div>
+            <div class="readMore"><a href="//blogs.chapman.edu/scst/2015/03/05/college-bowl-team-for-the-regional-win/">Read More<span class="bullet"> »</span></a></div>                                            
         </div>
     </li>
     <li>
@@ -27,7 +24,7 @@
         <img alt="page loading" class="centerNewsLoader loading" src="../_files/level/img/ajax-loader.gif"/>
         <div class="story story1" itemscope="" itemtype="http://schema.org/Article">
           <div class="todayTomorrow">
-            <span class="today">TODAY</span>
+            <span class="today" style="visibility:visible;">TODAY</span>
             <span class="tomorrow">TOMORROW</span>
           </div>
           <div class="date" itemprop="datePublished">
@@ -45,7 +42,7 @@
         <div class="story story2" itemscope="" itemtype="http://schema.org/Article">
           <div class="todayTomorrow">
             <span class="today">TODAY</span>
-            <span class="tomorrow">TOMORROW</span>
+            <span class="tomorrow" style="visibility: visible;">TOMORROW</span>
           </div>
           <div class="date" itemprop="datePublished">
             <div class="day"></div>
