--- a/src/stylesheets/base/defaults.scss
+++ b/src/stylesheets/base/defaults.scss
@@ -81,11 +81,11 @@ button, input, select, textarea {
 
 a {
   // color: #00e;
-  color: $cu-dark-red;
+  color: $red;
   text-decoration: none;
   &:visited {
     // color: #551a8b;
-    color: $cu-red;
+    color: $red;
     border-bottom: none;
   }
   &:hover {
@@ -101,10 +101,6 @@ a {
   &:hover, &:active {
     outline: 0;
     text-decoration: none;
-  }
-  &:link {
-    color: $cu-dark-red;
-    border-bottom: none;
   }
   &.cta {
     padding: 7px 10px 7px 10px;
@@ -151,22 +147,6 @@ a {
       margin-bottom: 0;
     }
   }
-}
-
-input[type=submit], a.button { // Forms
-  // font-weight: bold;
-  // font-size: 12px;
-  // background-color: #8F0C30;
-  // cursor: pointer;
-  // color: $white;
-  // padding: 4px;
-  // border: none;
-  // box-shadow: 0px 0px 7px #434343;
-  // display: inline-block;
-  // zoom: 1;
-  // &:hover {
-  //   background-color: #AF2C50;
-  // }
 }
 
 p.source {
