--- a/docs/_includes/widgets/primary_content/featured_news_events_feed_1.html
+++ b/docs/_includes/widgets/primary_content/featured_news_events_feed_1.html
@@ -24,7 +24,7 @@
         <img alt="page loading" class="centerNewsLoader loading" src="../_files/level/img/ajax-loader.gif"/>
         <div class="story story1" itemscope="" itemtype="http://schema.org/Article">
           <div class="todayTomorrow">
-            <span class="today" style="visibility:visible;">TODAY</span>
+            <span class="today" style="display: inline;">TODAY</span>
             <span class="tomorrow">TOMORROW</span>
           </div>
           <div class="date" itemprop="datePublished">
@@ -42,7 +42,7 @@
         <div class="story story2" itemscope="" itemtype="http://schema.org/Article">
           <div class="todayTomorrow">
             <span class="today">TODAY</span>
-            <span class="tomorrow" style="visibility: visible;">TOMORROW</span>
+            <span class="tomorrow" style="display: inline;">TOMORROW</span>
           </div>
           <div class="date" itemprop="datePublished">
             <div class="day"></div>
