Little fixes to events-news-widget

--- a/docs/_includes/widgets/primary_content/featured_news_events_feed_1.html
+++ b/docs/_includes/widgets/primary_content/featured_news_events_feed_1.html
@@ -7,8 +7,10 @@
   <ul class="newsEventsContent">
     <li class="active">
         <div class="featured">
+          <div class="col1">
             <img class="image" height="130" src="{% asset_path placeholder/food_science.jpg %}" width="225" alt="Food Science College Bowl Team Wins Big at Regional Competition">
-                                                        
+          </div>
+          <div class="col2">                                     
             <div class="date">
                 <div class="day">05</div>
                 <div class="month">MAR</div>
@@ -16,7 +18,8 @@
             </div>
             <div class="title"><a href="//blogs.chapman.edu/scst/2015/03/05/college-bowl-team-for-the-regional-win/">Food Science College Bowl Team Wins Big at Regional Competition</a></div>
             <div class="description">Once again, Chapman University’s food science students reign as the Mountain West region’s champions of Institute of Food Technologists (IFT) College Bowl. Next stop: Chicago for the National Competition at the IFT Annual Meeting!</div>
-            <div class="readMore"><a href="//blogs.chapman.edu/scst/2015/03/05/college-bowl-team-for-the-regional-win/">Read More<span class="bullet"> »</span></a></div>                                            
+            <div class="readMore"><a href="//blogs.chapman.edu/scst/2015/03/05/college-bowl-team-for-the-regional-win/">Read More<span class="bullet"> »</span></a></div>
+          </div>                                           
         </div>
     </li>
     <li>
